--- a/react/src/styles/App.scss
+++ b/react/src/styles/App.scss
@@ -14,111 +14,111 @@ body,
 * {
   box-sizing: border-box;
 }
-
-// General modals classes
-.close-modal {
-  position: absolute;
-  top: 1.2rem;
-  right: 2rem;
-  font-size: 5rem;
-  color: #333;
-  cursor: pointer;
-  border: none;
-  background: none;
-}
-
-.hidden {
-  display: none;
-}
-
-.mod {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  width: 70%;
-  background-color: white;
-  padding: 6rem;
-  border-radius: 5px;
-  box-shadow: 0 3rem 5rem rgba(0, 0, 0, 0.3);
-  z-index: 10;
-}
-
-.overlay {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background-color: rgba(0, 0, 0, 0.6);
-  backdrop-filter: blur(3px);
-  z-index: 5;
-}
-
-// Form modal classes
-.form-modal {
-  background-image: url("../../public/modal-cat-background.jpg");
-  color: #fff;
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-position: 50% 50%;
-}
-
-.form {
-  color: #333;
-}
-
-// Doku grid classes
-.container {
-  width: 100%;
-  height: 100%;
-}
-
-.doku-container {
-  width: 50%;
-  padding: 25%;
-  padding-top: 0%;
-}
-
-.grid-group {
-  width: 100%;
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
-  grid-template-rows: 1fr 1fr 1fr 1fr 1fr;
-  justify-items: stretch;
-  align-items: inital;
-  border-radius: 10%;
-  border-collapse: collapse;
-}
-
-.inside {
-  padding: 20px 24px;
-  cursor: pointer;
-  text-align: center;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  background-color: #eee;
-  color: #444;
-  border: 1px solid grey;
-  aspect-ratio: 1;
-}
-
-.frame {
-  padding: 20px 24px;
-  text-align: center;
-  justify-content: center;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  color: black;
-  aspect-ratio: 1;
-}
-
-.inside:hover {
-  background-color: #ffc5c5;
-}
-
-.disabled {
-  cursor: not-allowed;
-}
+//
+//// General modals classes
+//.close-modal {
+//  position: absolute;
+//  top: 1.2rem;
+//  right: 2rem;
+//  font-size: 5rem;
+//  color: #333;
+//  cursor: pointer;
+//  border: none;
+//  background: none;
+//}
+//
+//.hidden {
+//  display: none;
+//}
+//
+//.mod {
+//  position: absolute;
+//  top: 50%;
+//  left: 50%;
+//  transform: translate(-50%, -50%);
+//  width: 70%;
+//  background-color: white;
+//  padding: 6rem;
+//  border-radius: 5px;
+//  box-shadow: 0 3rem 5rem rgba(0, 0, 0, 0.3);
+//  z-index: 10;
+//}
+//
+//.overlay {
+//  position: fixed;
+//  top: 0;
+//  left: 0;
+//  width: 100%;
+//  height: 100%;
+//  background-color: rgba(0, 0, 0, 0.6);
+//  backdrop-filter: blur(3px);
+//  z-index: 5;
+//}
+//
+//// Form modal classes
+//.form-modal {
+//  background-image: url("../../public/modal-cat-background.jpg");
+//  color: #fff;
+//  background-size: cover;
+//  background-repeat: no-repeat;
+//  background-position: 50% 50%;
+//}
+//
+//.form {
+//  color: #333;
+//}
+//
+//// Doku grid classes
+//.container {
+//  width: 100%;
+//  height: 100%;
+//}
+//
+//.doku-container {
+//  width: 50%;
+//  padding: 25%;
+//  padding-top: 0%;
+//}
+//
+//.grid-group {
+//  width: 100%;
+//  display: grid;
+//  grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+//  grid-template-rows: 1fr 1fr 1fr 1fr 1fr;
+//  justify-items: stretch;
+//  align-items: inital;
+//  border-radius: 10%;
+//  border-collapse: collapse;
+//}
+//
+//.inside {
+//  padding: 20px 24px;
+//  cursor: pointer;
+//  text-align: center;
+//  display: flex;
+//  align-items: center;
+//  justify-content: center;
+//  background-color: #eee;
+//  color: #444;
+//  border: 1px solid grey;
+//  aspect-ratio: 1;
+//}
+//
+//.frame {
+//  padding: 20px 24px;
+//  text-align: center;
+//  justify-content: center;
+//  display: flex;
+//  align-items: center;
+//  justify-content: center;
+//  color: black;
+//  aspect-ratio: 1;
+//}
+//
+//.inside:hover {
+//  background-color: #ffc5c5;
+//}
+//
+//.disabled {
+//  cursor: not-allowed;
+//}
