--- a/react/src/styles/header.scss
+++ b/react/src/styles/header.scss
@@ -11,7 +11,7 @@
   box-shadow: 0 1rem 3rem rgba(0, 0, 0, 0.3);
 
   &-title {
-    flex: 1 0 auto;
+    flex: 0 0 auto;
     display: flex;
     align-items: center;
     gap: 12px;
@@ -20,8 +20,10 @@
     .logo {
       height: 100%;
     }
+
     .logo-writing {
       height: 50%;
+      aspect-ratio: 10/1;
     }
   }
 
@@ -31,5 +33,9 @@
 
   @media (max-width: $screen-threshold) {
     height: 60px;
+
+    .logo-writing {
+      aspect-ratio: 8/1;
+    }
   }
 }
