--- a/vanilla/mate-doku/style.css
+++ b/vanilla/mate-doku/style.css
@@ -2,7 +2,8 @@
 :root {
   --lighter-color: #eee;
   --light-color: #ccc;
-  --medium-color: #444;
+  --medium-light-color: #d0d0d0;
+  --medium-dark-color: #444;
   --dark-color: #303030;
   --darker-color: #000000;
 }
@@ -34,6 +35,7 @@ body {
 }
 
 footer {
+  font-family: "Quicksand", sans-serif;
   margin-top: 50px;
   bottom: 15px;
   text-align: center;
@@ -102,6 +104,7 @@ footer {
   }
 }
 
+/* CONTAINER */
 .container {
   padding-top: 2rem;
   width: 100%;
@@ -114,7 +117,7 @@ footer {
 @media (max-width: 768px) {
   .container {
     padding-top: 1rem;
-    font-family: 12pt;
+    font-size: 11pt;
   }
 }
 
@@ -138,7 +141,7 @@ footer {
 }
 
 .inside {
-  color: var(--medium-color);
+  color: var(--medium-dark-color);
   background-color: var(--lighter-color);
   display: flex;
   align-items: center;
@@ -158,7 +161,7 @@ footer {
 }
 
 .inside:hover {
-  background-color: #d0d0d0;
+  background-color: var(--medium-light-color);
 }
 
 .frame-logo {
@@ -168,20 +171,19 @@ footer {
 
 /* TODO: refactor after responsiveness */
 .summary {
-  padding: 20px 24px;
   cursor: pointer;
-  text-align: center;
   display: flex;
+  text-align: center;
   align-items: center;
   justify-content: center;
   border-radius: 100%;
 }
 
 .summary:hover {
-  background-color: #d0d0d0;
+  background-color: var(--medium-light-color);
   /* background-position: 25% 50%; */
   opacity: 0.2;
-  color: black;
+  color: var(--darker-color);
 }
 
 .disabled {
