--- a/vanilla/mate-doku/style.css
+++ b/vanilla/mate-doku/style.css
@@ -38,8 +38,12 @@ footer {
   font-family: "Quicksand", sans-serif;
   margin-top: 50px;
   bottom: 15px;
-  text-align: center;
   font-size: 1.5rem;
+  align-content: center;
+  text-align: center;
+  justify-content: center;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 /* HEADER */
@@ -87,6 +91,38 @@ footer {
   border: none;
 }
 
+/* CONTAINER
+/* The container has three blocks: 
+- the title, 
+- the doku-container (holding the grid and stat container)
+- the footer
+
+It also holds all the modals.
+*/
+.container {
+  padding-top: 2rem;
+  width: 100%;
+  height: 100%;
+  overflow-y: auto;
+  font-family: "VT323";
+  font-size: 15pt;
+}
+
+@media (max-width: 768px) {
+  .container {
+    padding-top: 1rem;
+    font-size: 10pt;
+  }
+}
+
+.container-block {
+  width: 100%;
+  align-content: center;
+  justify-content: center;
+  margin-left: auto;
+  margin-right: auto;
+}
+
 /* TITLE */
 .puzzle-title {
   padding-top: 0;
@@ -104,31 +140,9 @@ footer {
   }
 }
 
-/* CONTAINER */
-.container {
-  padding-top: 2rem;
-  width: 100%;
-  height: 100%;
-  overflow-y: auto;
-  font-family: "VT323";
-  font-size: 2rem;
-}
-
-@media (max-width: 768px) {
-  .container {
-    padding-top: 1rem;
-    font-size: 11pt;
-  }
-}
-
 .doku-container {
   display: grid;
-  width: 100%;
-  max-width: 800px;
-  align-content: center;
-  justify-content: center;
-  margin-left: auto;
-  margin-right: auto;
+  max-width: 700px;
   grid-template-areas: "grid stat";
 }
 
@@ -137,6 +151,8 @@ footer {
     grid-template-areas:
       "grid"
       "stat";
+    max-width: 180px;
+    font-size: 10pt;
   }
 }
 
