--- a/vanilla/mate-doku/style.css
+++ b/vanilla/mate-doku/style.css
@@ -131,6 +131,7 @@ It also holds all the modals.
 .puzzle-title {
   padding-top: 0;
   margin-top: 0;
+  padding-bottom: 2rem;
   font-family: "VT323";
   text-shadow: 2px 0 var(--light-color);
   font-size: 6rem;
@@ -141,6 +142,7 @@ It also holds all the modals.
 @media (max-width: 768px) {
   .puzzle-title {
     font-size: 4rem;
+    padding-bottom: 1rem;
   }
 }
 
@@ -156,7 +158,7 @@ It also holds all the modals.
     grid-template-areas:
       "grid"
       "stat";
-    max-width: 120px;
+    max-width: 350px;
   }
 }
 
@@ -174,7 +176,7 @@ It also holds all the modals.
 
 @media (max-width: 768px) {
   .grid-group {
-    max-width: 200px;
+    max-width: 350px;
   }
 }
 
@@ -184,7 +186,6 @@ It also holds all the modals.
   grid-template-columns: 1fr;
   grid-template-rows: 1fr 1fr 1fr;
   border-radius: 10%;
-  border-collapse: collapse;
   align-content: center;
   justify-content: center;
 }
@@ -241,7 +242,7 @@ It also holds all the modals.
   .frame-stat {
     margin-left: 0;
     padding: 0.5rem;
-    aspect-ratio: 2;
+    aspect-ratio: 3;
   }
 
   .frame-logo {
