Fix modal responsiveness

--- a/vanilla/acat-doku/style.css
+++ b/vanilla/acat-doku/style.css
@@ -8,6 +8,10 @@
   --darker-color: #000000;
   --main-font-size-big-vw: 15pt;
   --main-font-size-small-vw: 11pt;
+  --title-font-size-big-vw: 45pt;
+  --title-font-size-small-vw: 30pt;
+  --mod-title-font-size-big-vw: 40pt;
+  --mod-title-font-size-small-vw: 20pt;
 }
 
 /* Hide scrollbar but keep scroll functionality */
@@ -138,14 +142,14 @@ footer {
   padding-bottom: 2rem;
   font-family: "VT323";
   text-shadow: 2px 0 var(--light-color);
-  font-size: 6rem;
+  font-size: var(--title-font-size-big-vw);
   color: var(--darker-color);
   text-align: center;
 }
 
 @media (max-width: 768px) {
   .puzzle-title {
-    font-size: 4rem;
+    font-size: var(--title-font-size-small-vw);
     padding-bottom: 1rem;
   }
 }
@@ -321,51 +325,11 @@ footer {
 }
 
 /* -------------------------- */
+/* -------------------------- */
+/* -------------------------- */
+/* -------------------------- */
+/* -------------------------- */
 /* MODALS */
-.close-modal-btn {
-  position: absolute;
-  top: 1.2rem;
-  right: 2rem;
-  font-size: 5rem;
-  color: var(--light-color);
-  cursor: pointer;
-  border: none;
-  background: none;
-}
-
-.hidden {
-  display: none;
-}
-
-.mod {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  width: 70%;
-  background-color: #eee;
-  padding: 6rem;
-  border-radius: 5px;
-  box-shadow: 0 3rem 5rem rgba(0, 0, 0, 0.3);
-  z-index: 10;
-}
-
-.form-modal {
-  background-image: url("./assets/form-modal.jpg");
-  color: white;
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-position: 50% 50%;
-}
-
-.form-title {
-  padding-bottom: 2rem;
-}
-
-.form {
-  color: #333;
-}
-
 .overlay {
   position: fixed;
   top: 0;
@@ -377,23 +341,83 @@ footer {
   z-index: 5;
 }
 
-.info-modal {
-  font-size: 2rem;
+.hidden {
+  display: none;
+}
+
+.mod {
+  font-family: "Quicksand", sans-serif;
+  font-size: var(--main-font-size-big-vw);
+  position: absolute;
+  text-align: left;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 70%;
+  background-color: var(--lighter-color);
+  padding: 6rem;
+  border-radius: 5px;
+  box-shadow: 0 3rem 5rem rgba(0, 0, 0, 0.3);
+  z-index: 10;
+}
+
+.mod-title {
+  font-size: var(--mod-title-font-size-big-vw);
+  padding-bottom: 2rem;
+  text-align: center;
+}
+
+.close-mod-btn {
+  position: absolute;
+  top: 1.2rem;
+  right: 2rem;
+  font-size: 5rem;
   color: var(--light-color);
-  background-image: url("./assets/mod.jpg");
+  cursor: pointer;
+  border: none;
+  background: none;
+}
+
+@media (max-width: 768px) {
+  .mod {
+    font-size: var(--main-font-size-small-vw);
+    padding: 2rem;
+  }
+
+  .mod-title {
+    font-size: var(--mod-title-font-size-small-vw);
+    padding-bottom: 1rem;
+  }
+
+  .close-mod-btn {
+    top: 0.6rem;
+    right: 1rem;
+    font-size: 3rem;
+  }
+}
+
+.form-modal {
+  color: white;
+  background-image: url("./assets/form-modal.jpg");
   background-size: cover;
   background-repeat: no-repeat;
   background-position: 50% 50%;
 }
 
-.info-title {
-  font-size: 6rem;
-  padding-bottom: 3rem;
-  text-align: center;
+.form {
+  color: var(--dark-color);
+}
+
+.form-title {
+  text-align: left;
+}
+
+.info-modal {
+  color: var(--medium-dark-color);
 }
 
 .game-over-modal {
-  font-size: 3rem;
+  /* font-size: 3rem; */
   color: var(--light-color);
   text-align: end;
   background-image: url("./assets/gameover-modal.jpg");
@@ -403,7 +427,7 @@ footer {
 }
 
 .win-modal {
-  font-size: 3rem;
+  /* font-size: 3rem; */
   font-weight: bolder;
   color: white;
   text-shadow: 2px 0 #000, -2px 0 #000, 0 2px #000, 0 -2px #000, 1px 1px #000,
