--- a/vanilla/acat-doku/style.css
+++ b/vanilla/acat-doku/style.css
@@ -206,6 +206,7 @@ footer {
   color: var(--medium-dark-color);
   background-color: var(--lighter-color);
   display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
   cursor: pointer;
@@ -436,4 +437,15 @@ footer {
   background-size: cover;
   background-repeat: no-repeat;
   background-position: 25% 50%;
+}
+
+/* -------------------------- */
+/* -------------------------- */
+/* -------------------------- */
+/* -------------------------- */
+/* -------------------------- */
+/* SPRITES */
+
+.depa {
+  background-image: url("./Depa.png");
 }
