--- a/vanilla/acat-doku/style.css
+++ b/vanilla/acat-doku/style.css
@@ -223,6 +223,11 @@ footer {
   aspect-ratio: 1;
 }
 
+.cell-img {
+  max-width: 90px;
+  max-width: 90px;
+}
+
 .cell-sprite {
   max-width: 100px;
   max-width: 100px;
@@ -235,6 +240,11 @@ footer {
 
   .inside {
     padding: 0.2rem;
+  }
+
+  .cell-img {
+    max-width: 35px;
+    max-width: 35px;
   }
 
   .cell-sprite {
