Fix oversize of cell imgs

--- a/vanilla/acat-doku/style.css
+++ b/vanilla/acat-doku/style.css
@@ -224,13 +224,13 @@ footer {
 }
 
 .cell-img {
-  max-width: 90px;
-  max-width: 90px;
+  max-width: 80px;
+  max-height: 80px;
 }
 
 .cell-sprite {
   max-width: 100px;
-  max-width: 100px;
+  max-height: 100px;
 }
 
 @media (max-width: 768px) {
@@ -243,8 +243,8 @@ footer {
   }
 
   .cell-img {
-    max-width: 35px;
-    max-width: 35px;
+    max-width: 40px;
+    max-height: 40px;
   }
 
   .cell-sprite {
