--- a/vanilla/ravioli-doku/style.css
+++ b/vanilla/ravioli-doku/style.css
@@ -225,13 +225,13 @@ footer {
 }
 
 .cell-img {
-  max-width: 90px;
-  max-width: 90px;
+  max-width: 80px;
+  max-height: 80px;
 }
 
 .cell-sprite {
   max-width: 100px;
-  max-width: 100px;
+  max-height: 100px;
 }
 
 @media (max-width: 768px) {
@@ -244,13 +244,13 @@ footer {
   }
 
   .cell-img {
-    max-width: 35px;
-    max-width: 35px;
+    max-width: 40px;
+    max-height: 40px;
   }
 
   .cell-sprite {
     max-width: 40px;
-    max-width: 40px;
+    max-height: 40px;
   }
 }
 
