--- a/vanilla/acat-doku/style.css
+++ b/vanilla/acat-doku/style.css
@@ -472,3 +472,23 @@ footer {
   background-repeat: no-repeat;
   background-position: 25% 50%;
 }
+
+.type-group {
+  display: grid;
+  grid-template-columns: 1fr 3fr;
+  grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+  align-content: center;
+  justify-content: center;
+}
+
+.cell-type {
+  /* margin-left: 1.5rem; */
+  width: 100%;
+  padding: 1rem;
+  display: flex;
+  text-align: left;
+  align-items: left;
+  justify-content: left;
+  color: var(--darker-color);
+  /* aspect-ratio: 1; */
+}
