--- a/vanilla/acat-doku/style.css
+++ b/vanilla/acat-doku/style.css
@@ -10,7 +10,7 @@
   --main-font-size-small-vw: 11pt;
   --title-font-size-big-vw: 45pt;
   --title-font-size-small-vw: 30pt;
-  --mod-title-font-size-big-vw: 40pt;
+  --mod-title-font-size-big-vw: 35pt;
   --mod-title-font-size-small-vw: 20pt;
 }
 
@@ -476,19 +476,17 @@ footer {
 .type-group {
   display: grid;
   grid-template-columns: 1fr 3fr;
-  grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
-  align-content: center;
-  justify-content: center;
+  grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr;
+  align-items: center;
 }
 
 .cell-type {
-  /* margin-left: 1.5rem; */
-  width: 100%;
-  padding: 1rem;
-  display: flex;
-  text-align: left;
-  align-items: left;
-  justify-content: left;
+  margin: 1rem;
   color: var(--darker-color);
-  /* aspect-ratio: 1; */
+}
+
+@media (max-width: 768px) {
+  .cell-type {
+    margin: 0.2rem;
+  }
 }
