--- a/vanilla/acat-doku/style.css
+++ b/vanilla/acat-doku/style.css
@@ -476,7 +476,7 @@ footer {
 .type-group {
   display: grid;
   grid-template-columns: 1fr 3fr;
-  grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr;
+  grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
   align-items: center;
 }
 
