First round of development: added header and basic components like icon-buttons and images. Added namespace service and styles structure. Work in progress on header scss.

--- a/angular/angular-doku/src/app/app.component.html
+++ b/angular/angular-doku/src/app/app.component.html
@@ -1,1 +1,7 @@
-
+<div class="wrapper">
+  <div class="header--wrapper">
+    <app-header></app-header>
+  </div>
+  <div class="content--wrapper"></div>
+  <div class="footer--wrapper"></div>
+</div>
