Add customization on header icons

--- a/angular/angular-doku/src/app/components/header/header.component.html
+++ b/angular/angular-doku/src/app/components/header/header.component.html
@@ -5,10 +5,12 @@
   </div>
   <div class="buttons--wrapper">
     <app-icon-button
+      class="buttons--icon"
       icon="info"
       (onClickEvent)="handleMenuButtonClick()"
     ></app-icon-button>
     <app-icon-button
+      class="buttons--icon"
       icon="whatshot"
       (onClickEvent)="handleMenuButtonClick()"
     ></app-icon-button>
